index.css
h1{
    display: inline-block;
    font-weight: 900;
    font-family: 'Merriweather', serif;
    margin-top: 5px;
    margin-left: 0px;
    margin-bottom: 15px; 
    color: white;
}
p{
    font-weight: 400;
    font-family: 'Roboto', serif;
    font-size: 13px;
    color: white;
    margin-bottom: 30px;
    margin-top: 0px;
}
article{
    background-size: cover;
    margin-bottom: 25px;
    border-radius: 4px;
    padding: 25px;
    padding-bottom: 15px;
}
.btnSection{
    margin-left: -3px;
}
.parentBtn{
    background: inherit;
    position: relative;
    margin-left: 3px;
    margin-bottom: 10px;
    display: inline-block;
    height: 30px;
    width: fit-content;
    padding: 1px 15px;
    border: none;
    border-radius: 30px;
    overflow: hidden;
}
@keyframes btnTransition{
    from{
        box-shadow: inset 0 0 0 3000px rgba(255,255,255,0.3);
    }
    to{
        box-shadow: inset 0 0 0 3000px rgba(255,255,255,0.5);
    }
}
.parentBtn:hover > .backgroundBtn{
    animation-name: btnTransition;
    animation-duration: 0.5s;
    animation-fill-mode: forwards;
}
.backgroundBtn{
    position: absolute;
    background: inherit;
    display: block;
    box-shadow: inset 0 0 0 3000px rgba(255,255,255,0.3);
    filter: blur(10px); 
    top: -15%;
    left: -15%;
    width: 115%;
    height: 115%; 
}
.contentBtn{
    position: relative;
    display: block;
    font-weight: 600;
    font-family: 'Roboto', serif;
    line-height: 30px;
    color: white;
    font-size: 12px;
    z-index: 1;
}
#contentContainer{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 625px;
    background: lightgray;
}
#articleOne{
    background-image: url(./assets/žuta.jpg);
}
#articleTwo{
    background-image: url(./assets/roza.jpg);
    
}
#articleThree{
    background-image: url(./assets/telefon.jpg);
}

